# perception_software

./: .gitignore  README.md
ai_modules/: CMakeLists.txt  build.sh
ai_modules/base/: box.h  comparison_traits.h  concurrent_object_pool.h  object.cc  object.h  object_pool.h  object_pool_types.cc  object_pool_types.h  object_supplement.h  object_types.h  point.h  point_cloud.h  point_cloud_util.cc  point_cloud_util.h  vehicle_struct.h
ai_modules/cmake/: ai_dependencies.cmake  gpu_dependencies.cmake
ai_modules/common/: lidar_error_code.h  lidar_timer.h  pcl_util.h  perception_gflags.cc  perception_gflags.h
ai_modules/common/geometry/: common.h  convex_hull_2d.h
ai_modules/common/image_processing/: hough_transfer.cc  hough_transfer_test.cc
ai_modules/common/lidar_processing/: pcl_util.h
ai_modules/image_bgs/: CMakeLists.txt
ai_modules/image_bgs/bgs/: CMakeLists.txt
ai_modules/image_saliency/: CMakeLists.txt
ai_modules/image_saliency/saliency/: GMRsaliency.cpp  GMRsaliency.h  acsaliency.cpp  acsaliency.h  bmsaliency.cpp  bmsaliency.h  ftsaliency.cpp  ftsaliency.h  hcsaliency.cpp  hcsaliency.h  isaliency.cpp  isaliency.h  ittisaliency.cpp  ittisaliency.h  lcsaliency.cpp  lcsaliency.h  mbsaliency.cpp  mbsaliency.h  mssaliency.cpp  mssaliency.h  rcsaliency.cpp  rcsaliency.h  srsaliency.cpp  srsaliency.h
ai_modules/image_saliency/tools/: testsaliency.cpp  utility.cpp  utility.h
ai_modules/imgproc_c/: CMakeLists.txt
ai_modules/imgproc_c/base/: fast_math_compute.c  image_processing.c  sobel.c
ai_modules/imgproc_c/clustering/: clustering_rect.c  clustering_rect.h
ai_modules/imgproc_c/common/: quick_sort.c  string_split.c
ai_modules/imgproc_c/cvtcolor/: color_converting.c  color_converting.h
ai_modules/imgproc_c/features2d/: fast_corner_detection.c  fast_corner_detection.h
ai_modules/imgproc_c/filtering/: base_image_filter.c
ai_modules/imgproc_c/image_resize/: image_resize.c  image_resize.h
ai_modules/imgproc_c/optical_flow/: lk_opticalflow.c  lk_opticalflow.h  lk_trajectory.c  lk_trajectory.h  opticalflow_data_struct.h
ai_modules/imgproc_c/tools/: CMakeLists.txt
ai_modules/ldws/: CMakeLists.txt
ai_modules/ldws/tools/: camera_ldws_detector.cpp
ai_modules/lidar_common/: CMakeLists.txt  assignment_problem_solver.cc  assignment_problem_solver.h  calculate_cost_matrix.cc  calculate_cost_matrix.h  coordinate_transform.cc  coordinate_transform.h  gaussian_distribution_outlier_filter.cc  gaussian_distribution_outlier_filter.h  geometry_util.h  lidar_cloud_filter.h  lidar_cloud_sample.h  merge_object.cc  merge_object.h  object_builder.cc  object_builder.h  pcl_common.cc  pcl_common.h  tracked_object.cc  tracked_object.h  transform_type.h  voxel_grid_filter.cc  voxel_grid_filter.h
ai_modules/lidar_detection/: CMakeLists.txt
ai_modules/lidar_detection/app/: point_pillars_detection.cc  point_pillars_detection.h
ai_modules/lidar_detection/component/: CMakeLists.txt  lidar_detection_component.cc  lidar_detection_component.h
ai_modules/lidar_detection/conf/: pandar64_detection_conf.pb.txt  perception_common.flag
ai_modules/lidar_detection/dag/: pandar64_lidar_detection.dag
ai_modules/lidar_detection/lidar_point_pillars/: CMakeLists.txt  anchor_mask_cuda.cu  nms_cuda.cu  nms_cuda.h  point_pillars.cc  point_pillars.h  postprocess_cuda.cu  postprocess_cuda.h  preprocess_points.cc  preprocess_points_cuda.cu  scatter_cuda.cu
ai_modules/lidar_detection/tools/: CMakeLists.txt  pcl_show.cc  pcl_show.h  show_obstacle_perception.cc
ai_modules/lidar_ground/: CMakeLists.txt
ai_modules/lidar_ground/ground/: CMakeLists.txt  lidar_ground_extractor.cc  lidar_ground_extractor.h  lidar_plane_fit_ground.cc  lidar_plane_fit_ground.h  lidar_ransac_fit_ground.cc  lidar_ransac_fit_ground.h
ai_modules/lidar_ground/tools/: lidar_ground_segement.cc  pcl_viewer.cc  pcl_viewer.h
ai_modules/lidar_segment/: CMakeLists.txt
ai_modules/lidar_segment/clustering/: CMakeLists.txt  abstract_cluster.cc  abstract_cluster.h  cvc_cluster.cc  cvc_cluster.h  euclidean_cluster.cc  euclidean_cluster.cpp  euclidean_cluster.h  rbnn_cluster.cc  rbnn_cluster.h  scanlinerun_cluster.cc  scanlinerun_cluster.h
ai_modules/lidar_segment/tools/: lidar_clustering_object.cc
ai_modules/lidar_tracking/: CMakeLists.txt
ai_modules/lidar_tracking/kalman_tracking/: CMakeLists.txt  kalman_multiple_tracker.cc  kalman_multiple_tracker.h  kalman_tracker.cc  kalman_tracker.h  mykalmanfilter.cc  mykalmanfilter.h  sort_kalman_filter.cc  sort_kalman_filter.h  sort_tracker.cc  sort_tracker.h  tracker_merge.cc  tracker_merge.h
ai_modules/lidar_tracking/tools/: lidar_tracking_objects.cc
ai_modules/proto/: CMakeLists.txt  lidar_component_config.proto  perception_obstacle.proto  pnc_point.proto  pointcloud.proto
ai_modules/qt_show/: BUILD  show_camera_radar_fusion.cc  widget.cc  widget.h
ai_modules/show_tools/: CMakeLists.txt
ai_modules/show_tools/pcl_show/: pcl_show.cc  pcl_show.h  pcl_viewer.cc  pcl_viewer.h  show_obstacle_perception.cc
ai_modules/show_tools/qt_show/: CMakeLists.txt  channel_reader.h  show_camera_fusion.cc  widget.cc  widget.h
ai_modules/test_data/: cloud_120.pcd
ai_modules/test_data/pcd/: test.txt
ai_modules/utility/: CMakeLists.txt
ai_modules/utility/registerer/: CMakeLists.txt
ai_modules/utility/thread/: CMakeLists.txt
cyberRT/cyber/py_wrapper/: CMakeLists.txt
drivers/: CMakeLists.txt  README.md
drivers/camera/: BUILD  CMakeLists.txt  camera_component.cc  camera_component.h  compress_component.cc  compress_component.h  get_gateway_ts.cc  get_gateway_ts.h  time_ts_service.cc  time_ts_service.h  usb_cam.cc  usb_cam.h  util.cc  util.h
drivers/camera/dag/: camera.dag  (+1 more)
drivers/cmake/: FindV4L2.cmake  cyber_dependencies.cmake  driver_dependencies.cmake
drivers/image_capture/: CMakeLists.txt
drivers/proto/: CMakeLists.txt  camera_config.proto  conti_radar.proto  conti_radar_conf.proto  error_code.proto  header.proto  pandar.proto  pandar_config.proto  pointcloud.proto  robosense_config.proto  sensor_image.proto  velodyne.proto  velodyne_config.proto
(+146 files in other folders)
